--- a/opml/index.html
+++ b/opml/index.html
@@ -3,7 +3,7 @@
       <title>Overcast OPML</title>
     </head>
     <body>
-      <outline xmlUrl='http://www.howstuffworks.com/podcasts/brainstuff.rss' />
+      <!-- <outline xmlUrl='http://www.howstuffworks.com/podcasts/brainstuff.rss' />
       <outline xmlUrl='http://feeds.5by5.tv/puromac' />
       <outline xmlUrl='http://rss.earwolf.com/startup-school' />
       <outline xmlUrl='http://maximumfun.org/feeds/wbp.xml' />
@@ -58,7 +58,6 @@
       <outline xmlUrl='http://feeds.5by5.tv/tdb' />
       <outline xmlUrl='http://feeds.feedburner.com/TheMemoryPalace' />
       <outline xmlUrl='http://feeds.hearstartup.com/hearstartup' />
-      <outline xmlUrl='http://feeds.theincomparable.com/doctorwho' />
       <outline xmlUrl='http://feeds.feedburner.com/SlateAmicusWithDahliaLithwick' />
       <outline xmlUrl='http://thegrowthshow.hubspot.libsynpro.com/rss' />
       <outline xmlUrl='http://lorepodcast.libsyn.com/rss' />
@@ -79,9 +78,7 @@
       <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:295675418/sounds.rss' />
       <outline xmlUrl='https://www.relay.fm/roboism/feed' />
       <outline xmlUrl='http://rss.earwolf.com/cracked-movie-club' />
-      <outline xmlUrl='http://feeds.feedburner.com/thornmorris' />
-      <outline xmlUrl='http://rss.earwolf.com/kevin-pollaks-chat-show' />
-      <outline xmlUrl='http://feeds.feedburner.com/theangrychicken' />
+      <outline xmlUrl='http://rss.earwolf.com/kevin-pollaks-chat-show' /> -->
       <outline xmlUrl='http://www.espn.com/espnradio/feeds/rss/podcast.xml?id=10528553' />
       <outline xmlUrl='http://feeds.feedburner.com/thetimferrissshow' />
       <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:99423956/sounds.rss' />
