--- a/opml/index.html
+++ b/opml/index.html
@@ -3,6 +3,81 @@
       <title>Overcast OPML</title>
     </head>
     <body>
+      <outline xmlUrl='http://www.howstuffworks.com/podcasts/brainstuff.rss' />
+      <outline xmlUrl='http://feeds.5by5.tv/puromac' />
+      <outline xmlUrl='http://rss.earwolf.com/startup-school' />
+      <outline xmlUrl='http://maximumfun.org/feeds/wbp.xml' />
+      <outline xmlUrl='http://rss.earwolf.com/analyze-phish' />
+      <outline xmlUrl='http://www.podcastone.com/podcast?categoryID2=593' />
+      <outline xmlUrl='https://rss.simplecast.com/podcasts/1041/rss' />
+      <outline xmlUrl='http://feeds.theincomparable.com/ruin' />
+      <outline xmlUrl='http://robbell.podbean.com/feed/' />
+      <outline xmlUrl='http://feeds.theincomparable.com/ump' />
+      <outline xmlUrl='http://feeds.gimletmedia.com/mysteryshow' />
+      <outline xmlUrl='https://www.relay.fm/material/feed' />
+      <outline xmlUrl='https://www.omnycontent.com/d/playlist/4b5f9d6d-9214-48cb-8455-a73200038129/76f26848-76db-42d9-83bf-a78e0075127f/5d1a6abb-fdfe-4c3e-a6cb-a78e00751284/podcast.rss' />
+      <outline xmlUrl='https://www.relay.fm/b-sides/feed' />
+      <outline xmlUrl='https://www.relay.fm/tc/feed' />
+      <outline xmlUrl='http://rss.acast.com/ft-alphachat' />
+      <outline xmlUrl='http://feeds.theincomparable.com/afoot' />
+      <outline xmlUrl='http://www.howstuffworks.com/podcasts/stuff-you-should-know.rss' />
+      <outline xmlUrl='http://feeds.theincomparable.com/cartooncast' />
+      <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:205120113/sounds.rss' />
+      <outline xmlUrl='http://rss.earwolf.com/denzel-washington' />
+      <outline xmlUrl='http://feeds.podcasts.dell.com/trailblazers' />
+      <outline xmlUrl='http://feeds.gimletmedia.com/eltshow' />
+      <outline xmlUrl='http://thriveloud.libsyn.com/rss' />
+      <outline xmlUrl='https://www.npr.org/rss/podcast.php?id=510317' />
+      <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:311644605/sounds.rss' />
+      <outline xmlUrl='http://feeds.prx.org/toe' />
+      <outline xmlUrl='http://static.aboveandbeyond.nu/grouptherapy/podcast.xml' />
+      <outline xmlUrl='http://feeds.5by5.tv/criticalpath' />
+      <outline xmlUrl='http://macosken.libsyn.com/rss' />
+      <outline xmlUrl='http://www.howstuffworks.com/podcasts/stuff-to-blow-your-mind.rss' />
+      <outline xmlUrl='http://rss.earwolf.com/by-the-way-in-conversation-with-jeff-garlin' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlateMagazineDailyPodcast' />
+      <outline xmlUrl='http://feeds.5by5.tv/bigwebshow' />
+      <outline xmlUrl='http://feeds.feedburner.com/artofmanlinesspodcast' />
+      <outline xmlUrl='http://thedollop.libsyn.com/rss' />
+      <outline xmlUrl='http://throwingshade.libsyn.com/rss' />
+      <outline xmlUrl='http://feeds.theincomparable.com/teevee' />
+      <outline xmlUrl='http://feeds.theincomparable.com/randomtrek' />
+      <outline xmlUrl='http://sawbones.libsyn.com/rss' />
+      <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:16745745/sounds.rss' />
+      <outline xmlUrl='https://www.relay.fm/analogue/feed' />
+      <outline xmlUrl='https://feed.pippa.io/public/shows/clublife-by-tiesto' />
+      <outline xmlUrl='http://datastori.es/feed/podcast/' />
+      <outline xmlUrl='http://feeds.feedburner.com/solidverbal' />
+      <outline xmlUrl='http://feeds.5by5.tv/webahead' />
+      <outline xmlUrl='http://maximumfun.org/feeds/onebadmother.xml' />
+      <outline xmlUrl='http://rss.earwolf.com/nocturnal-emotions' />
+      <outline xmlUrl='http://rss.earwolf.com/pod-cats' />
+      <outline xmlUrl='http://feeds.feedburner.com/apnetpodcast' />
+      <outline xmlUrl='http://reformedpub.libsyn.com/rss' />
+      <outline xmlUrl='http://feeds.5by5.tv/tdb' />
+      <outline xmlUrl='http://feeds.feedburner.com/TheMemoryPalace' />
+      <outline xmlUrl='http://feeds.hearstartup.com/hearstartup' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlateAmicusWithDahliaLithwick' />
+      <outline xmlUrl='http://thegrowthshow.hubspot.libsynpro.com/rss' />
+      <outline xmlUrl='http://lorepodcast.libsyn.com/rss' />
+      <outline xmlUrl='http://feedpress.me/som' />
+      <outline xmlUrl='https://www.relay.fm/isometric/feed' />
+      <outline xmlUrl='http://billrisser.libsyn.com/rss' />
+      <outline xmlUrl='https://www.relay.fm/penaddict/feed' />
+      <outline xmlUrl='https://www.houstonpublicmedia.org/podcasts/classical-classroom/' />
+      <outline xmlUrl='https://www.relay.fm/disruption/feed' />
+      <outline xmlUrl='https://www.relay.fm/prompt/feed' />
+      <outline xmlUrl='https://rss.simplecast.com/podcasts/2389/rss' />
+      <outline xmlUrl='https://www.relay.fm/mixedfeelings/feed' />
+      <outline xmlUrl='https://www.relay.fm/almanac/feed' />
+      <outline xmlUrl='http://centerforneweconomics.libsyn.com/rss' />
+      <outline xmlUrl='http://feeds.5by5.tv/dbh-video' />
+      <outline xmlUrl='http://rss.earwolf.com/hello-from-the-magic-tavern' />
+      <outline xmlUrl='http://feeds.stownpodcast.org/stownpodcast' />
+      <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:295675418/sounds.rss' />
+      <outline xmlUrl='https://www.relay.fm/roboism/feed' />
+      <outline xmlUrl='http://rss.earwolf.com/kevin-pollaks-chat-show' />
+      <outline xmlUrl='http://www.espn.com/espnradio/feeds/rss/podcast.xml?id=10528553' />
       <outline xmlUrl='http://feeds.feedburner.com/thetimferrissshow' />
       <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:99423956/sounds.rss' />
       <outline xmlUrl='http://thesdrshow.libsyn.com/rss' />
