--- a/opml/index.html
+++ b/opml/index.html
@@ -48,6 +48,65 @@
       <outline xmlUrl='http://datastori.es/feed/podcast/' />
       <outline xmlUrl='http://feeds.feedburner.com/solidverbal' />
       <outline xmlUrl='http://feeds.5by5.tv/webahead' />
+      <outline xmlUrl='http://wtfpod.libsyn.com/rss' />
+      <outline xmlUrl='http://podcastfeeds.nbcnews.com/audio/podcast/MSNBC-MADDOW-NETCAST-MP3.xml' />
+      <outline xmlUrl='http://feeds.feedburner.com/todayinthepast' />
+      <outline xmlUrl='http://feeds.feedburner.com/freakonomicsradio' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlateCultureGabfest' />
+      <outline xmlUrl='http://www.lse.ac.uk/assets/richmedia/webFeeds/publicLecturesAndEvents_iTunesStore.xml' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlateAfterword' />
+      <outline xmlUrl='http://thecultcast.libsyn.com/rss' />
+      <outline xmlUrl='http://feeds.strangersnomore.org/StrangersNoMore' />
+      <outline xmlUrl='http://feeds.feedburner.com/castofkings' />
+      <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:11727054/sounds.rss' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlatePoliticalGabfest' />
+      <outline xmlUrl='http://youneedabudget.libsyn.com/rss' />
+      <outline xmlUrl='http://feeds.5by5.tv/b2w' />
+      <outline xmlUrl='http://feeds.feedburner.com/thetruthapm' />
+      <outline xmlUrl='https://feeds.podtrac.com/_-sJYvsFQrn_' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlateNegotiationAcademy' />
+      <outline xmlUrl='http://feeds.theincomparable.com/theincomparable' />
+      <outline xmlUrl='http://risk.libsyn.com/rss' />
+      <outline xmlUrl='http://www.abc.net.au/radionational/feed/2888650/podcast.xml' />
+      <outline xmlUrl='http://veritypodcast.libsyn.com/rss' />
+      <outline xmlUrl='http://rss.earwolf.com/ronna-beverly' />
+      <outline xmlUrl='http://rss.earwolf.com/the-apple-sisters' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlateStrangerThanFiction' />
+      <outline xmlUrl='http://feeds.feedburner.com/TEDTalks_audio' />
+      <outline xmlUrl='http://feeds.kexp.org/kexp/songoftheday' />
+      <outline xmlUrl='https://www.npr.org/rss/podcast.php?id=510208' />
+      <outline xmlUrl='http://rss.earwolf.com/improv4humans' />
+      <outline xmlUrl='http://feeds.wnyc.org/onthemedia' />
+      <outline xmlUrl='http://feeds.feedburner.com/spipodcast' />
+      <outline xmlUrl='http://feeds.duckfeed.tv/woff' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlateAudioBookClub' />
+      <outline xmlUrl='http://feeds.5by5.tv/otp' />
+      <outline xmlUrl='http://feeds.5by5.tv/ia' />
+      <outline xmlUrl='http://rss.earwolf.com/eardrop' />
+      <outline xmlUrl='http://rss.earwolf.com/the-cracked-podcast' />
+      <outline xmlUrl='http://feeds.feedburner.com/BabyGeniuses' />
+      <outline xmlUrl='http://davehillincident.libsyn.com/rss' />
+      <outline xmlUrl='https://www.npr.org/rss/podcast.php?id=510309' />
+      <outline xmlUrl='http://theartofcharmpodcast.theartofcharm.libsynpro.com/rss' />
+      <outline xmlUrl='https://learningenglish.voanews.com/podcast/?count=20&amp;zoneId=1689' />
+      <outline xmlUrl='http://feed.radiodiaries.org/radio-diaries?id=510288' />
+      <outline xmlUrl='http://feeds.feedburner.com/PhoneDifferentPodcast' />
+      <outline xmlUrl='http://feeds.5by5.tv/specials' />
+      <outline xmlUrl='http://feeds.theincomparable.com/tpk' />
+      <outline xmlUrl='http://www.npr.org/rss/podcast.php?id=510289' />
+      <outline xmlUrl='http://joeroganexp.joerogan.libsynpro.com/rss' />
+      <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:38128127/sounds.rss' />
+      <outline xmlUrl='http://feeds.feedburner.com/SlatePoetryPodcast' />
+      <outline xmlUrl='http://feeds.5by5.tv/pipeline' />
+      <outline xmlUrl='http://feeds.wnyc.org/notetoself-podcast' />
+      <outline xmlUrl='http://feeds.feedburner.com/coyleandsharpe' />
+      <outline xmlUrl='http://feeds.feedburner.com/OhNoPodcast' />
+      <outline xmlUrl='http://feeds.feedburner.com/loveplusradio' />
+      <outline xmlUrl='http://rss.earwolf.com/yo-is-this-racist' />
+      <outline xmlUrl='http://rss.earwolf.com/wolf-den' />
+      <outline xmlUrl='http://feeds.5by5.tv/quit' />
+      <outline xmlUrl='http://rss.earwolf.com/the-fogelnest-files' />
+      <outline xmlUrl='http://ladytolady.libsyn.com/rss' />
       <outline xmlUrl='http://maximumfun.org/feeds/onebadmother.xml' />
       <outline xmlUrl='http://rss.earwolf.com/nocturnal-emotions' />
       <outline xmlUrl='http://rss.earwolf.com/pod-cats' />
@@ -112,7 +171,6 @@
       <outline xmlUrl='http://longform.libsyn.com/rss' />
       <outline xmlUrl='http://stoppodcastingyourself.libsyn.com/rss' />
       <outline xmlUrl='http://feeds.5by5.tv/dlc' />
-      <outline xmlUrl='https://www.joelosteen.com/Views/RSS/Feed?t=PodcastAudio&amp;ct=CustomList&amp;cst=Podcasts' />
       <outline xmlUrl='http://feeds.5by5.tv/iohyes' />
       <outline xmlUrl='http://feeds.theincomparable.com/gameshow' />
       <outline xmlUrl='http://feeds.theincomparable.com/lazydoctorwho' />
@@ -168,7 +226,6 @@
       <outline xmlUrl='https://www.relay.fm/clockwise/feed' />
       <outline xmlUrl='http://feeds.5by5.tv/podcastmethod' />
       <outline xmlUrl='http://feeds.theallusionist.org/Allusionist' />
-      <outline xmlUrl='http://feeds.feedburner.com/awatts' />
       <outline xmlUrl='http://feeds.gimletmedia.com/samplershow' />
       <outline xmlUrl='http://feeds.theincomparable.com/pod4ham' />
       <outline xmlUrl='https://www.relay.fm/presentable/feed' />
@@ -220,7 +277,6 @@
       <outline xmlUrl='http://rss.earwolf.com/off-book' />
       <outline xmlUrl='http://feeds.theincomparable.com/notplaying' />
       <outline xmlUrl='http://feeds.feedburner.com/SlateMomAndDadAreFighting' />
-      <outline xmlUrl='http://feeds.feedburner.com/RoderickOnTheLine' />
       <outline xmlUrl='http://feeds.revealradio.org/revealpodcast' />
       <outline xmlUrl='http://rss.earwolf.com/get-up-on-this' />
       <outline xmlUrl='http://feeds.gimletmedia.com/hearreplyall' />
@@ -265,22 +321,18 @@
       <outline xmlUrl='https://audioboom.com/channels/2402227.rss' />
       <outline xmlUrl='http://feeds.feedburner.com/SlateHangUpAndListen' />
       <outline xmlUrl='http://feeds.5by5.tv/amplified' />
-      <outline xmlUrl='http://feeds.feedburner.com/BackStoryRadio' />
       <outline xmlUrl='http://gameofowns.libsyn.com/rss' />
       <outline xmlUrl='http://rss.earwolf.com/who-charted' />
       <outline xmlUrl='http://rss.earwolf.com/affirmation-nation' />
       <outline xmlUrl='http://feeds.5by5.tv/awkward' />
       <outline xmlUrl='http://feeds.feedburner.com/slatevoice' />
       <outline xmlUrl='http://feeds.feedburner.com/SlatePoliticsProse' />
-      <outline xmlUrl='http://theflophouse.libsyn.com/rss' />
       <outline xmlUrl='http://rss.earwolf.com/hollywood-handbook' />
       <outline xmlUrl='http://rss.earwolf.com/the-andy-daly-podcast-pilot-project' />
       <outline xmlUrl='http://feeds.5by5.tv/rubyonrails' />
       <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:62921190/sounds.rss' />
       <outline xmlUrl='http://rss.earwolf.com/with-special-guest-lauren-lapkus' />
-      <outline xmlUrl='http://feedpress.me/s' />
       <outline xmlUrl='http://feeds.theincomparable.com/flash' />
-      <outline xmlUrl='http://danbenjamin.com/feed/podcast' />
       <outline xmlUrl='http://feeds.5by5.tv/dbh' />
       <outline xmlUrl='http://feeds.5by5.tv/steady' />
       <outline xmlUrl='http://feeds.5by5.tv/cashscorner' />
@@ -289,7 +341,6 @@
       <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:163579675/sounds.rss' />
       <outline xmlUrl='https://www.relay.fm/mpu/feed' />
       <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:193080377/sounds.rss' />
-      <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:2655632/sounds.rss' />
       <outline xmlUrl='http://feeds.feedburner.com/SlatesTrumpcast' />
       <outline xmlUrl='https://www.relay.fm/cmdspace/feed' />
       <outline xmlUrl='http://feeds.theincomparable.com/supergirl' />
