--- a/opml/index.html
+++ b/opml/index.html
@@ -3,7 +3,7 @@
     <title>Overcast OPML</title>
   </head>
   <body>
-    <outline xmlUrl='http://shaffir1.libsyn.com/rss' />
+    <outline xmlUrl='http://www.howstuffworks.com/podcasts/brainstuff.rss' />
     <outline xmlUrl='http://feeds.5by5.tv/puromac' />
     <outline xmlUrl='http://rss.earwolf.com/startup-school' />
     <outline xmlUrl='http://maximumfun.org/feeds/wbp.xml' />
