--- a/opml/index.html
+++ b/opml/index.html
@@ -14,6 +14,7 @@
     <outline xmlUrl='http://robbell.podbean.com/feed/' />
     <outline xmlUrl='http://feeds.theincomparable.com/ump' />
     <outline xmlUrl='http://feeds.gimletmedia.com/mysteryshow' />
+    <outline xmlUrl='https://www.relay.fm/material/feed' />
     <outline xmlUrl='https://www.omnycontent.com/d/playlist/4b5f9d6d-9214-48cb-8455-a73200038129/76f26848-76db-42d9-83bf-a78e0075127f/5d1a6abb-fdfe-4c3e-a6cb-a78e00751284/podcast.rss' />
     <outline xmlUrl='https://www.relay.fm/b-sides/feed' />
     <outline xmlUrl='https://www.relay.fm/tc/feed' />
@@ -21,6 +22,7 @@
     <outline xmlUrl='http://feeds.theincomparable.com/afoot' />
     <outline xmlUrl='http://www.howstuffworks.com/podcasts/stuff-you-should-know.rss' />
     <outline xmlUrl='http://feeds.theincomparable.com/cartooncast' />
+    <outline xmlUrl='https://www.relay.fm/ltoe/feed/' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:205120113/sounds.rss' />
     <outline xmlUrl='http://rss.earwolf.com/denzel-washington' />
     <outline xmlUrl='http://feeds.podcasts.dell.com/trailblazers' />
@@ -48,8 +50,14 @@
     <outline xmlUrl='http://datastori.es/feed/podcast/' />
     <outline xmlUrl='http://feeds.feedburner.com/solidverbal' />
     <outline xmlUrl='http://feeds.5by5.tv/webahead' />
+    <outline xmlUrl='http://freyburg.libsyn.com/rss' />
+    <outline xmlUrl='http://shaffir1.libsyn.com/rss' />
+    <!-- <outline xmlUrl='http://feed.nashownotes.com/rss.xml' /> -->
     <outline xmlUrl='http://wtfpod.libsyn.com/rss' />
+    <outline xmlUrl='http://feeds.wnyc.org/radiolab' />
     <outline xmlUrl='http://podcastfeeds.nbcnews.com/audio/podcast/MSNBC-MADDOW-NETCAST-MP3.xml' />
+    <outline xmlUrl='http://atp.fm/episodes?format=rss' />
+    <outline xmlUrl='http://feeds.99percentinvisible.org/99percentinvisible' />
     <outline xmlUrl='http://feeds.feedburner.com/todayinthepast' />
     <outline xmlUrl='http://feeds.feedburner.com/freakonomicsradio' />
     <outline xmlUrl='http://feeds.feedburner.com/SlateCultureGabfest' />
@@ -78,7 +86,8 @@
     <outline xmlUrl='http://rss.earwolf.com/improv4humans' />
     <outline xmlUrl='http://feeds.wnyc.org/onthemedia' />
     <outline xmlUrl='http://feeds.feedburner.com/spipodcast' />
-    <outline xmlUrl='http://feeds.duckfeed.tv/woff' />
+    <outline xmlUrl='http://feeds.feedburner.com/kasperhauser' />
+    <outline xmlUrl='http://feeds.feedburner.com/kasperhauser' />
     <outline xmlUrl='http://feeds.feedburner.com/SlateAudioBookClub' />
     <outline xmlUrl='http://feeds.5by5.tv/otp' />
     <outline xmlUrl='http://feeds.5by5.tv/ia' />
@@ -86,6 +95,7 @@
     <outline xmlUrl='http://rss.earwolf.com/the-cracked-podcast' />
     <outline xmlUrl='http://feeds.feedburner.com/BabyGeniuses' />
     <outline xmlUrl='http://davehillincident.libsyn.com/rss' />
+    <outline xmlUrl='http://feeds.5minutesinchurchhistory.com/5ChurchHistory' />
     <outline xmlUrl='https://www.npr.org/rss/podcast.php?id=510309' />
     <outline xmlUrl='http://theartofcharmpodcast.theartofcharm.libsynpro.com/rss' />
     <outline xmlUrl='https://learningenglish.voanews.com/podcast/?count=20&amp;zoneId=1689' />
@@ -115,6 +125,7 @@
     <outline xmlUrl='http://feeds.5by5.tv/tdb' />
     <outline xmlUrl='http://feeds.feedburner.com/TheMemoryPalace' />
     <outline xmlUrl='http://feeds.hearstartup.com/hearstartup' />
+    <outline xmlUrl='http://feeds.theincomparable.com/doctorwho' />
     <outline xmlUrl='http://feeds.feedburner.com/SlateAmicusWithDahliaLithwick' />
     <outline xmlUrl='http://thegrowthshow.hubspot.libsynpro.com/rss' />
     <outline xmlUrl='http://lorepodcast.libsyn.com/rss' />
@@ -134,7 +145,10 @@
     <outline xmlUrl='http://feeds.stownpodcast.org/stownpodcast' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:295675418/sounds.rss' />
     <outline xmlUrl='https://www.relay.fm/roboism/feed' />
+    <outline xmlUrl='http://rss.earwolf.com/cracked-movie-club' />
+    <outline xmlUrl='http://feeds.feedburner.com/thornmorris' />
     <outline xmlUrl='http://rss.earwolf.com/kevin-pollaks-chat-show' />
+    <outline xmlUrl='http://feeds.feedburner.com/theangrychicken' />
     <outline xmlUrl='http://www.espn.com/espnradio/feeds/rss/podcast.xml?id=10528553' />
     <outline xmlUrl='http://feeds.feedburner.com/thetimferrissshow' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:99423956/sounds.rss' />
@@ -146,6 +160,7 @@
     <outline xmlUrl='http://rss.earwolf.com/spontaneanation-with-paul-f-tompkins' />
     <outline xmlUrl='http://feeds.wnyc.org/tnypoliticalscene' />
     <outline xmlUrl='http://feeds.wnyc.org/newyorkerradiohour' />
+    <outline xmlUrl='https://www.relay.fm/upgrade/feed' />
     <outline xmlUrl='http://feeds.theincomparable.com/jessicajones' />
     <outline xmlUrl='http://feeds.theincomparable.com/sophomorelit' />
     <outline xmlUrl='http://rss.earwolf.com/comedy-bang-bang' />
@@ -170,6 +185,9 @@
     <outline xmlUrl='http://longform.libsyn.com/rss' />
     <outline xmlUrl='http://stoppodcastingyourself.libsyn.com/rss' />
     <outline xmlUrl='http://feeds.5by5.tv/dlc' />
+    <outline xmlUrl='http://rss.earwolf.com/u-talkin-u2-to-me' />
+    <outline xmlUrl='http://feeds.feedburner.com/InternetHistoryPodcast' />
+    <outline xmlUrl='https://www.joelosteen.com/Views/RSS/Feed?t=PodcastAudio&amp;ct=CustomList&amp;cst=Podcasts' />
     <outline xmlUrl='http://feeds.5by5.tv/iohyes' />
     <outline xmlUrl='http://feeds.theincomparable.com/gameshow' />
     <outline xmlUrl='http://feeds.theincomparable.com/lazydoctorwho' />
@@ -225,6 +243,7 @@
     <outline xmlUrl='https://www.relay.fm/clockwise/feed' />
     <outline xmlUrl='http://feeds.5by5.tv/podcastmethod' />
     <outline xmlUrl='http://feeds.theallusionist.org/Allusionist' />
+    <outline xmlUrl='http://feeds.feedburner.com/awatts' />
     <outline xmlUrl='http://feeds.gimletmedia.com/samplershow' />
     <outline xmlUrl='http://feeds.theincomparable.com/pod4ham' />
     <outline xmlUrl='https://www.relay.fm/presentable/feed' />
@@ -267,6 +286,7 @@
     <outline xmlUrl='http://cbsradionewsfeed.com/rss.php?id=146&amp;ud=12' />
     <outline xmlUrl='http://saastr.libsyn.com/rss' />
     <outline xmlUrl='https://www.relay.fm/ungeniused/feed' />
+    <outline xmlUrl='http://runjumpstomp.com/switchcraft?format=rss' />
     <outline xmlUrl='https://feeds.publicradio.org/public_feeds/make-me-smart-with-kai-and-molly/itunes/rss' />
     <outline xmlUrl='http://feeds.gimletmedia.com/twiceremovedshow' />
     <outline xmlUrl='http://rss.earwolf.com/in-your-dreams' />
@@ -276,7 +296,9 @@
     <outline xmlUrl='http://rss.earwolf.com/off-book' />
     <outline xmlUrl='http://feeds.theincomparable.com/notplaying' />
     <outline xmlUrl='http://feeds.feedburner.com/SlateMomAndDadAreFighting' />
+    <outline xmlUrl='http://feeds.feedburner.com/RoderickOnTheLine' />
     <outline xmlUrl='http://feeds.revealradio.org/revealpodcast' />
+    <outline xmlUrl='http://www.hellointernet.fm/podcast?format=rss' />
     <outline xmlUrl='http://rss.earwolf.com/get-up-on-this' />
     <outline xmlUrl='http://feeds.gimletmedia.com/hearreplyall' />
     <outline xmlUrl='http://feeds.feedburner.com/checkpoints-declandineen' />
@@ -308,6 +330,7 @@
     <outline xmlUrl='http://feeds.5by5.tv/pipelineclassic' />
     <outline xmlUrl='http://feed.songexploder.net/songexploder' />
     <outline xmlUrl='https://www.relay.fm/cortex/feed' />
+    <outline xmlUrl='https://www.relay.fm/canvas/feed' />
     <outline xmlUrl='http://feeds.theincomparable.com/klickitcast' />
     <outline xmlUrl='http://feeds.theincomparable.com/cots' />
     <outline xmlUrl='http://feeds.theincomparable.com/sestracast' />
@@ -316,20 +339,25 @@
     <outline xmlUrl='http://feeds.feedburner.com/SlateLexiconValley' />
     <outline xmlUrl='http://mbmbam.libsyn.com/rss' />
     <outline xmlUrl='http://philosophybites.libsyn.com/rss' />
+    <outline xmlUrl='https://audioboom.com/channels/2402227.rss' />
     <outline xmlUrl='http://feeds.feedburner.com/SlateHangUpAndListen' />
     <outline xmlUrl='http://feeds.5by5.tv/amplified' />
+    <outline xmlUrl='http://feeds.feedburner.com/BackStoryRadio' />
     <outline xmlUrl='http://gameofowns.libsyn.com/rss' />
     <outline xmlUrl='http://rss.earwolf.com/who-charted' />
     <outline xmlUrl='http://rss.earwolf.com/affirmation-nation' />
     <outline xmlUrl='http://feeds.5by5.tv/awkward' />
     <outline xmlUrl='http://feeds.feedburner.com/slatevoice' />
     <outline xmlUrl='http://feeds.feedburner.com/SlatePoliticsProse' />
+    <outline xmlUrl='http://theflophouse.libsyn.com/rss' />
     <outline xmlUrl='http://rss.earwolf.com/hollywood-handbook' />
     <outline xmlUrl='http://rss.earwolf.com/the-andy-daly-podcast-pilot-project' />
     <outline xmlUrl='http://feeds.5by5.tv/rubyonrails' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:62921190/sounds.rss' />
     <outline xmlUrl='http://rss.earwolf.com/with-special-guest-lauren-lapkus' />
+    <outline xmlUrl='http://feedpress.me/s' />
     <outline xmlUrl='http://feeds.theincomparable.com/flash' />
+    <outline xmlUrl='http://danbenjamin.com/feed/podcast' />
     <outline xmlUrl='http://feeds.5by5.tv/dbh' />
     <outline xmlUrl='http://feeds.5by5.tv/steady' />
     <outline xmlUrl='http://feeds.5by5.tv/cashscorner' />
@@ -338,6 +366,7 @@
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:163579675/sounds.rss' />
     <outline xmlUrl='https://www.relay.fm/mpu/feed' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:193080377/sounds.rss' />
+    <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:2655632/sounds.rss' />
     <outline xmlUrl='http://feeds.feedburner.com/SlatesTrumpcast' />
     <outline xmlUrl='https://www.relay.fm/cmdspace/feed' />
     <outline xmlUrl='http://feeds.theincomparable.com/supergirl' />
@@ -345,6 +374,6 @@
     <outline xmlUrl='https://changelog.com/jsparty/feed' />
     <outline xmlUrl='https://www.relay.fm/download/feed' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:317882567/sounds.rss' />
-    <outline xmlUrl='http://hiddenmickeys.libsyn.com/rss' />  
+    <outline xmlUrl='http://hiddenmickeys.libsyn.com/rss' />
   </body>
 </opml>
