fix podcast formats

--- a/opml/index.html
+++ b/opml/index.html
@@ -148,7 +148,7 @@
     <outline xmlUrl='http://rss.earwolf.com/cracked-movie-club' />
     <outline xmlUrl='http://feeds.feedburner.com/thornmorris' />
     <outline xmlUrl='http://rss.earwolf.com/kevin-pollaks-chat-show' />
-    <outline xmlUrl='http://feeds.feedburner.com/theangrychicken' />
+    <!-- <outline xmlUrl='http://feeds.feedburner.com/theangrychicken' /> -->
     <outline xmlUrl='http://www.espn.com/espnradio/feeds/rss/podcast.xml?id=10528553' />
     <outline xmlUrl='http://feeds.feedburner.com/thetimferrissshow' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:99423956/sounds.rss' />
