fix podcast formats

--- a/opml/index.html
+++ b/opml/index.html
@@ -3,7 +3,7 @@
     <title>Overcast OPML</title>
   </head>
   <body>
-    <outline xmlUrl='http://www.howstuffworks.com/podcasts/brainstuff.rss' />
+    <!-- <outline xmlUrl='http://www.howstuffworks.com/podcasts/brainstuff.rss' />
     <outline xmlUrl='http://feeds.5by5.tv/puromac' />
     <outline xmlUrl='http://rss.earwolf.com/startup-school' />
     <outline xmlUrl='http://maximumfun.org/feeds/wbp.xml' />
@@ -52,7 +52,7 @@
     <outline xmlUrl='http://feeds.5by5.tv/webahead' />
     <outline xmlUrl='http://freyburg.libsyn.com/rss' />
     <outline xmlUrl='http://shaffir1.libsyn.com/rss' />
-    <!-- <outline xmlUrl='http://feed.nashownotes.com/rss.xml' /> -->
+    <outline xmlUrl='http://feed.nashownotes.com/rss.xml' />
     <outline xmlUrl='http://wtfpod.libsyn.com/rss' />
     <outline xmlUrl='http://feeds.wnyc.org/radiolab' />
     <outline xmlUrl='http://podcastfeeds.nbcnews.com/audio/podcast/MSNBC-MADDOW-NETCAST-MP3.xml' />
@@ -94,8 +94,8 @@
     <outline xmlUrl='http://rss.earwolf.com/eardrop' />
     <outline xmlUrl='http://rss.earwolf.com/the-cracked-podcast' />
     <outline xmlUrl='http://feeds.feedburner.com/BabyGeniuses' />
-    <outline xmlUrl='http://davehillincident.libsyn.com/rss' />
-    <outline xmlUrl='http://feeds.5minutesinchurchhistory.com/5ChurchHistory' />
+    <outline xmlUrl='http://davehillincident.libsyn.com/rss' /> -->
+    <!-- <outline xmlUrl='http://feeds.5minutesinchurchhistory.com/5ChurchHistory' /> -->
     <outline xmlUrl='https://www.npr.org/rss/podcast.php?id=510309' />
     <outline xmlUrl='http://theartofcharmpodcast.theartofcharm.libsynpro.com/rss' />
     <outline xmlUrl='https://learningenglish.voanews.com/podcast/?count=20&amp;zoneId=1689' />
