--- a/opml/index.html
+++ b/opml/index.html
@@ -196,7 +196,7 @@
     <outline xmlUrl='http://feeds.gimletmedia.com/sciencevs' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:87851010/sounds.rss' />
     <outline xmlUrl='http://feeds.feedburner.com/CoolGamesInc' />
-    <outline xmlUrl='http://feeds.feedburner.com/PardonMyTake' />
+    <!-- <outline xmlUrl='http://feeds.feedburner.com/PardonMyTake' /> -->
     <outline xmlUrl='http://thedickshow.libsyn.com/thedickshow' />
     <outline xmlUrl='http://www.espn.com/espnradio/podcast/feeds/itunes/podCast?id=14554755' />
     <outline xmlUrl='http://www.omnycontent.com/d/playlist/62a95110-0493-4086-bf8e-a709016cf065/89b0b2fe-f2c5-4984-a984-a709016e9cdd/194e163b-22ff-4b98-b76e-a7090171d6b2/podcast.rss' />
