fix podcast formats

--- a/opml/index.html
+++ b/opml/index.html
@@ -96,7 +96,7 @@
     <outline xmlUrl='http://feeds.feedburner.com/BabyGeniuses' />
     <outline xmlUrl='http://davehillincident.libsyn.com/rss' /> -->
     <!-- <outline xmlUrl='http://feeds.5minutesinchurchhistory.com/5ChurchHistory' /> -->
-    <outline xmlUrl='https://www.npr.org/rss/podcast.php?id=510309' />
+    <!-- <outline xmlUrl='https://www.npr.org/rss/podcast.php?id=510309' />
     <outline xmlUrl='http://theartofcharmpodcast.theartofcharm.libsynpro.com/rss' />
     <outline xmlUrl='https://learningenglish.voanews.com/podcast/?count=20&amp;zoneId=1689' />
     <outline xmlUrl='http://feed.radiodiaries.org/radio-diaries?id=510288' />
@@ -147,9 +147,9 @@
     <outline xmlUrl='https://www.relay.fm/roboism/feed' />
     <outline xmlUrl='http://rss.earwolf.com/cracked-movie-club' />
     <outline xmlUrl='http://feeds.feedburner.com/thornmorris' />
-    <outline xmlUrl='http://rss.earwolf.com/kevin-pollaks-chat-show' />
+    <outline xmlUrl='http://rss.earwolf.com/kevin-pollaks-chat-show' /> -->
     <!-- <outline xmlUrl='http://feeds.feedburner.com/theangrychicken' /> -->
-    <outline xmlUrl='http://www.espn.com/espnradio/feeds/rss/podcast.xml?id=10528553' />
+    <!-- <outline xmlUrl='http://www.espn.com/espnradio/feeds/rss/podcast.xml?id=10528553' />
     <outline xmlUrl='http://feeds.feedburner.com/thetimferrissshow' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:99423956/sounds.rss' />
     <outline xmlUrl='http://thesdrshow.libsyn.com/rss' />
@@ -195,7 +195,7 @@
     <outline xmlUrl='http://feeds.5by5.tv/bingeworthy-mrrobot' />
     <outline xmlUrl='http://feeds.gimletmedia.com/sciencevs' />
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:87851010/sounds.rss' />
-    <outline xmlUrl='http://feeds.feedburner.com/CoolGamesInc' />
+    <outline xmlUrl='http://feeds.feedburner.com/CoolGamesInc' /> -->
     <!-- <outline xmlUrl='http://feeds.feedburner.com/PardonMyTake' /> -->
     <outline xmlUrl='http://thedickshow.libsyn.com/thedickshow' />
     <outline xmlUrl='http://www.espn.com/espnradio/podcast/feeds/itunes/podCast?id=14554755' />
