fix podcast formats

--- a/opml/index.html
+++ b/opml/index.html
@@ -219,7 +219,7 @@
     <outline xmlUrl='http://feeds.5by5.tv/outragemachine' />
     <outline xmlUrl='http://feeds.theincomparable.com/best' />
     <outline xmlUrl='http://feeds.getmortified.com/mortifiedpod' />
-    <outline xmlUrl='http://theniceguys.libsyn.com/rss' />
+    <!-- <outline xmlUrl='http://theniceguys.libsyn.com/rss' /> -->
     <outline xmlUrl='http://feeds.soundcloud.com/users/soundcloud:users:146429914/sounds.rss' />
     <outline xmlUrl='https://www.relay.fm/rocket/feed' />
     <outline xmlUrl='http://feeds.theincomparable.com/truedetective' />
