--- a/opml/index.html
+++ b/opml/index.html
@@ -299,7 +299,7 @@
         <outline xmlUrl="https://www.mtggoldfish.com/podcasts/feed.rss" />
         <outline xmlUrl="http://feeds.feedburner.com/FireteamChatIgnsDestinyPodcast" />
         <outline xmlUrl="http://www.spreaker.com/user/6543245/episodes/feed" />
-        <outline xmlUrl="http://thecountdownmoviesandtv.podomatic.com/rss2.xml" />
+        <!-- <outline xmlUrl="http://thecountdownmoviesandtv.podomatic.com/rss2.xml" /> -->
         <outline xmlUrl="http://feeds.feedburner.com/IgnAnimeClub" />
         <outline xmlUrl="http://rss.acast.com/heretomakefriends" />
         <outline xmlUrl="https://rss.art19.com/black-men-cant-jump-in-hollywood" />
@@ -374,7 +374,7 @@
         <outline xmlUrl="http://feeds.feedburner.com/BachelorParty" />
         <outline xmlUrl="http://feeds.soundcloud.com/users/soundcloud:users:375676985/sounds.rss" />
         <outline xmlUrl="http://criticalrolepodcast.geekandsundry.com/feed/" />
-        <outline xmlUrl="https://onbeing.org/feed/podcast/this-movie-changed-me" />
+        <!-- <outline xmlUrl="https://onbeing.org/feed/podcast/this-movie-changed-me" /> -->
         <outline xmlUrl="https://rss.art19.com/the-reel" />
         <outline xmlUrl="http://feeds.frogpants.com/therewillbedungeons_feed.xml" />
         <outline xmlUrl="https://audioboom.com/channels/4943124.rss" />
