--- a/opml/overcast-5.html
+++ b/opml/overcast-5.html
@@ -10,8 +10,8 @@
         <outline xmlUrl="http://comedybutton.libsyn.com/rss" />
         <outline xmlUrl="http://feeds.ign.com/ignfeeds/podcasts/gamescoop/" />
         <outline xmlUrl="http://pokercast.libsyn.com/rss" />
-        <!-- <outline xmlUrl="http://playerone.libsyn.com/rss" /> -->
-        <!-- <outline xmlUrl="http://www.majorspoilers.com/media/criticalhit.xml" /> -->
+        <outline xmlUrl="http://playerone.libsyn.com/rss" />
+        <outline xmlUrl="http://www.majorspoilers.com/media/criticalhit.xml" />
         <!-- <outline xmlUrl="http://feeds.ign.com/ignfeeds/podcasts/xbox360/" /> -->
         <outline xmlUrl="http://feeds.ign.com/ignfeeds/podcasts/wii/" />
         <outline xmlUrl="https://www.howstuffworks.com/podcasts/carstuff.rss" />
