--- a/opml/index.html
+++ b/opml/index.html
@@ -269,9 +269,9 @@
         <outline xmlUrl="http://comedybutton.libsyn.com/rss" />
         <outline xmlUrl="http://feeds.ign.com/ignfeeds/podcasts/gamescoop/" />
         <outline xmlUrl="http://pokercast.libsyn.com/rss" />
-        <!-- <outline xmlUrl="http://playerone.libsyn.com/rss" /> -->
-        <!-- <outline xmlUrl="http://www.majorspoilers.com/media/criticalhit.xml" /> -->
-        <!-- <outline xmlUrl="http://feeds.ign.com/ignfeeds/podcasts/xbox360/" /> -->
+        <outline xmlUrl="http://playerone.libsyn.com/rss" />
+        <outline xmlUrl="http://www.majorspoilers.com/media/criticalhit.xml" />
+        <outline xmlUrl="http://feeds.ign.com/ignfeeds/podcasts/xbox360/" />
         <outline xmlUrl="http://feeds.ign.com/ignfeeds/podcasts/wii/" />
         <outline xmlUrl="https://www.howstuffworks.com/podcasts/carstuff.rss" />
         <outline xmlUrl="http://talkingcarshq.cr.libsynpro.com/rss" />
@@ -282,7 +282,7 @@
         <outline xmlUrl="http://www.wizards.com/drivetoworkpodcast.xml" />
         <outline xmlUrl="http://dicetower.libsyn.com/rss" />
         <outline xmlUrl="http://www.wizards.com/dnd/rsspodcast.xml" />
-        <!-- <outline xmlUrl="http://feeds.feedburner.com/starwarsreport_podcast" /> -->
+        <outline xmlUrl="http://feeds.feedburner.com/starwarsreport_podcast" />
         <outline xmlUrl="http://feeds.feedburner.com/CarCast" />
         <outline xmlUrl="http://shoutengine.com/TheSmokingTire.xml" />
         <outline xmlUrl="http://feeds.feedburner.com/DnDPodcast" />
@@ -293,9 +293,9 @@
         <outline xmlUrl="http://feeds.5by5.tv/dlc" />
         <outline xmlUrl="http://rss.acast.com/watchwhatcrappens" />
         <outline xmlUrl="https://feeds.feedburner.com/rocketjump/commandzone" />
-        <!-- <outline xmlUrl="http://popcorntalknetwork.com/ptn-episodes/dc-movie-news/feed/" /> -->
+        <outline xmlUrl="http://popcorntalknetwork.com/ptn-episodes/dc-movie-news/feed/" />
         <outline xmlUrl="http://feeds.soundcloud.com/users/soundcloud:users:35042463/sounds.rss" />
-        <!-- <outline xmlUrl="http://feeds.podtrac.com/jjhM1Pd5OUeO" /> -->
+        <outline xmlUrl="http://feeds.podtrac.com/jjhM1Pd5OUeO" />
         <outline xmlUrl="https://www.mtggoldfish.com/podcasts/feed.rss" />
         <outline xmlUrl="http://feeds.feedburner.com/FireteamChatIgnsDestinyPodcast" />
         <outline xmlUrl="http://www.spreaker.com/user/6543245/episodes/feed" />
@@ -313,7 +313,7 @@
         <outline xmlUrl="http://feeds.feedburner.com/westwingweekly" />
         <outline xmlUrl="http://caranddriverpodcast.collisions.libsynpro.com/rss" />
         <outline xmlUrl="http://feeds.soundcloud.com/users/soundcloud:users:214104572/sounds.rss" />
-        <!-- <outline xmlUrl="https://www.giantbomb.com/feeds/podcast/" /> -->
+        <outline xmlUrl="https://www.giantbomb.com/feeds/podcast/" />
         <outline xmlUrl="http://asmassets.mtvnservices.com/alias/podcasts/nickelodeon/nickelodeon_animation_podcast/Nickelodeon_iTunesPodcast_Podcasts.xml" />
         <outline xmlUrl="http://www.wizards.com/dnd/rsspodcast1.xml" />
         <outline xmlUrl="http://www.themusclecarplace.com/category/kibbe-and-finnegan/feed" />
@@ -336,7 +336,7 @@
         <outline xmlUrl="https://rss.art19.com/the-popcast-with-knox-and-jamie" />
         <outline xmlUrl="https://rss.art19.com/almost-famous-podcast" />
         <outline xmlUrl="http://feeds.feedburner.com/thejoegardenershow" />
-        <!-- <outline xmlUrl="http://feedpress.me/gameinformershow" /> -->
+        <outline xmlUrl="http://feedpress.me/gameinformershow" />
         <outline xmlUrl="http://feeds.feedburner.com/ThePolygonShow" />
         <outline xmlUrl="http://feeds.soundcloud.com/users/soundcloud:users:311210600/sounds.rss" />
         <outline xmlUrl="http://feeds.soundcloud.com/users/soundcloud:users:314774884/sounds.rss" />
