--- a/opml/opmlALL.html
+++ b/opml/opmlALL.html
@@ -201,6 +201,12 @@
         <outline xmlUrl="http://www.espn.com/espnradio/podcast/feeds/itunes/podCast?id=22056954" />
         <outline xmlUrl="http://tasteoftaylor.libsyn.com/rss" />
         
+        <outline xmlUrl="http://feeds.duckfeed.tv/woff" />
+        <outline xmlUrl="http://feeds.feedburner.com/theangrychicken" />
+        <outline xmlUrl="http://feeds.podcasts.dell.com/trailblazers" />
+        <outline xmlUrl="http://epicsuccess.libsyn.com/rss" />
+        <outline xmlUrl="http://fitsandstarts.fm/rss" />
+        
         <outline xmlUrl="http://feeds.5by5.tv/awkward" />
         <outline xmlUrl="http://feed.loveandradio.org/loveplusradio" />
         <!--<outline xmlUrl="http://homebrave.squarespace.com/home-of-the-brave?format=rss" />-->
