--- a/privacy.html
+++ b/privacy.html
@@ -103,7 +103,7 @@
                   this page.
                 </p> <p>This policy is effective as of 2020-08-02</p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about my
-                  Privacy Policy, do not hesitate to contact me at skich@skich.com.
+                  Privacy Policy, do not hesitate to contact me at hello@skich.com.
                 </p> 
     </body>
     </html>
