--- a/termsOfUse.html
+++ b/termsOfUse.html
@@ -1,3 +1,8 @@
+<html>
+  <title>
+
+  </title>
+  <body>
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
           background: transparent !important;
@@ -111,3 +116,5 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;"><span style="font
       }
     </style>
       </div>
+</body>
+</html>
